<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="30dp"
        android:text="@string/options_fragment_options_tv"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        app:contentPadding="15dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/maxResultTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/options_fragment_max_stations"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/maxResultSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:dropDownWidth="match_parent"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:textAlignment="center" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/options_fragment_open_Data"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/openLicenseSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:textOff=""
                        android:textOn=""
                        android:textSize="0sp"
                        android:theme="@style/SCBSwitch" />

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>