<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/locationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp"
            android:textStyle="bold|italic" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            app:contentPadding="10dp"
            app:contentPaddingLeft="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/locationTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/station_detail_location_detail"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/locationInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="15dp"
                    android:drawableLeft="@drawable/ic_location_black_20dp"
                    android:drawablePadding="15dp"
                    android:lineSpacingExtra="5dp"
                    android:paddingStart="5dp" />

                <TextView
                    android:id="@+id/latlon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:drawableLeft="@drawable/ic_near_me_black_20dp"
                    android:drawablePadding="15dp"
                    android:paddingStart="5dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            app:contentPadding="10dp"
            app:contentPaddingLeft="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/equipmentDetailTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/station_detail_equipment"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/connections"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="7dp"
                    android:drawableLeft="@drawable/ic_power_black_23dp"
                    android:drawablePadding="15dp"
                    android:lineSpacingExtra="7dp"
                    android:paddingStart="5dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            app:contentPadding="10dp"
            app:contentPaddingLeft="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usageTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/station_detail_usage_restrictions"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="7dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:id="@+id/operationalStatusTv"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_weight="0.6"
                                android:paddingStart="40dp"
                                android:text="@string/station_detail_operational_status"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/operationalStatus"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_column="2"
                                android:layout_weight="0.4"
                                android:paddingStart="10dp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:id="@+id/isMemberShipTv"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_weight="0.6"
                                android:paddingStart="40dp"
                                android:text="@string/station_detail_membership_required"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/memberShipReq"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_column="2"
                                android:layout_weight="0.4"
                                android:paddingStart="10dp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:id="@+id/accessKeyTv"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_weight="0.6"
                                android:drawableLeft="@drawable/ic_info_black_23dp"
                                android:drawablePadding="12dp"
                                android:paddingStart="5dp"
                                android:text="@string/station_detail_access_key_required"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/accessKeyReq"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_column="2"
                                android:layout_weight="0.4"
                                android:paddingStart="10dp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:id="@+id/payAtLocationTv"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_weight="0.6"
                                android:paddingStart="40dp"
                                android:text="@string/station_detail_pay_at_location"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/payAtLocation"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_column="2"
                                android:layout_weight="0.4"
                                android:paddingStart="10dp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="7dp">

                            <TextView
                                android:id="@+id/usageTypeTv"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_column="1"
                                android:layout_weight="0.6"
                                android:paddingStart="40dp"
                                android:text="@string/station_detail_usage_type"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/usageType"
                                android:layout_width="0dip"
                                android:layout_height="wrap_content"
                                android:layout_column="2"
                                android:layout_weight="0.4"
                                android:paddingStart="10dp" />
                        </TableRow>

                    </TableLayout>

                </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            app:contentPadding="10dp"
            app:contentPaddingLeft="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dataProviderTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/station_detail_data_provider"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.1"
                        app:srcCompat="@drawable/ic_assignment_black_23dp" />

                    <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/dataProviderTitleTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:layout_marginBottom="3dp"
                            android:paddingStart="5dp"
                            android:textSize="15sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/dataProviderUrlTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:paddingStart="5dp" />

                        <TextView
                            android:id="@+id/licenseTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:lineSpacingExtra="3dp"
                            android:paddingStart="5dp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>